# Fruit-Basket-Sorter-Game

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh  fruit-basket  highscores.txt  main  main.cpp  readme.md  version.h.in
Linux .deb Release/: Fruity-Game_1.0.0_amd64.deb  fruity-game_1.0.0_amd64.deb
Screenshot/: gameplay v1.0.webm
